crates/pixi_manifest/src/snapshots/pixi_manifest__discovery__test__explicit_workspace_discoverer@empty.snap
---
source: crates/pixi_manifest/src/discovery.rs
expression: snapshot
---
  × unrecognized manifest path. Expected a .toml file or a directory containing pixi.toml, pyproject.toml, or mojoproject.toml.
