crates/pixi_manifest/src/snapshots/pixi_manifest__discovery__test__explicit_workspace_discoverer@implicit-tables-pyproject_pyproject.toml.snap
---
source: crates/pixi_manifest/src/discovery.rs
assertion_line: 724
expression: snapshot
---
Discovered workspace at: implicit-tables-pyproject/pyproject.toml
- Name: implicit-tables-test
