crates/pixi_manifest/src/snapshots/pixi_manifest__discovery__test__explicit_workspace_discoverer@missing-tables_pyproject.toml.snap
---
source: crates/pixi_manifest/src/discovery.rs
expression: snapshot
---
  × Missing table in manifest pyproject.toml
   ╭─[<CARGO_ROOT>/tests/data/workspace-discovery/missing-tables/pyproject.toml:1:1]
 1 │ [project]
   · ─
 2 │ name = "malformed"
   ╰────
  help: Check your manifest for a [tool.pixi.*] table. See https://pixi.sh/latest/python/pyproject_toml for more information.
