crates/pixi_manifest/src/snapshots/pixi_manifest__discovery__test__explicit_workspace_discoverer@non-pixi-build_project_pixi.toml.snap
---
source: crates/pixi_manifest/src/discovery.rs
expression: snapshot
---
  × [package] section is only allowed when the `pixi-build` preview flag is enabled
   ╭─[:1:1]
 1 │ ╭─▶ [package]
 2 │ │   name = "package"
 3 │ ╰─▶ version = "0.1.0"
 4 │
   ╰────
  help: Run `pixi workspace preview add pixi-build` to enable the preview flag
