crates/pixi_manifest/src/snapshots/pixi_manifest__discovery__test__explicit_workspace_discoverer@pixi.toml.snap
---
source: crates/pixi_manifest/src/discovery.rs
expression: snapshot
---
Discovered workspace at: pixi.toml
- Name: workspace-discovery
Package: workspace-discovery @ 0.1.0
