crates/pixi_manifest/src/snapshots/pixi_manifest__discovery__test__explicit_workspace_discoverer@split_package_bad_package.snap
---
source: crates/pixi_manifest/src/discovery.rs
expression: snapshot
---
  × missing field 'name' in table
   ╭─[<CARGO_ROOT>/tests/data/workspace-discovery/split_package/bad/package/pixi.toml:6:1]
 5 │
 6 │ ╭─▶ [package.build.backend]
 7 │ │   name = "pixi-build-rattler-build"
 8 │ ╰─▶ version = "0.1.*"
   ╰────
