crates/pixi_manifest/src/snapshots/pixi_manifest__discovery__test__explicit_workspace_discoverer@split_package_good_package.snap
---
source: crates/pixi_manifest/src/discovery.rs
expression: snapshot
---
Discovered workspace at: split_package/good/pixi.toml
- Name: test_build_conda_package
Package: test_build_conda_package @ 1.0.0
